добавление размеров и ценников

--- a/templates/main.html
+++ b/templates/main.html
@@ -266,7 +266,7 @@
                                     <p style="text-align: left;">
                                         <span style="font-size: 20px;">Размер - <strong>950х550мм</strong></span>
                                         <br>
-                                        <span style="font-size: 20px;">Цена м<sup>2</sup> - <strong>1150</strong></span>
+                                        <span style="font-size: 20px;">Цена м<sup>2</sup> - <strong>1150 руб</strong></span>
                                     </p>
                                 </div>
                             </div>
@@ -285,9 +285,9 @@
                                 </a>
                                 <div class="card-body">
                                     <p style="text-align: left;">
-                                        <span style="font-size: 20px;">Размер - <strong>*размер*мм</strong></span>
+                                        <span style="font-size: 20px;">Размер - <strong>950х550мм</strong></span>
                                         <br>
-                                        <span style="font-size: 20px;">Цена м<sup>2</sup> - <strong>*цена*</strong></span>
+                                        <span style="font-size: 20px;">Цена м<sup>2</sup> - <strong>1150 руб</strong></span>
                                     </p>
                                 </div>
                             </div>
@@ -306,9 +306,9 @@
                                 </a>
                                 <div class="card-body">
                                     <p style="text-align: left;">
-                                        <span style="font-size: 20px;">Размер - <strong>*размер*мм</strong></span>
+                                        <span style="font-size: 20px;">Размер - <strong>950х550мм</strong></span>
                                         <br>
-                                        <span style="font-size: 20px;">Цена м<sup>2</sup> - <strong>*цена*</strong></span>
+                                        <span style="font-size: 20px;">Цена м<sup>2</sup> - <strong>1150 руб</strong></span>
                                     </p>
                                 </div>
                             </div>
@@ -327,9 +327,9 @@
                                 </a>
                                 <div class="card-body">
                                     <p style="text-align: left;">
-                                        <span style="font-size: 20px;">Размер - <strong>*размер*мм</strong></span>
+                                        <span style="font-size: 20px;">Размер - <strong>950х550мм</strong></span>
                                         <br>
-                                        <span style="font-size: 20px;">Цена м<sup>2</sup> - <strong>*цена*</strong></span>
+                                        <span style="font-size: 20px;">Цена м<sup>2</sup> - <strong>1150 руб</strong></span>
                                     </p>
                                 </div>
                             </div>
@@ -342,7 +342,7 @@
         <br>
         <br>
 
-        <!-- <div class="block">
+        <div class="block">
             <div class="node node489 widget widget-text cr-text">
                 <div class="font-header xs-force-center textable">
                     <h2 class="shadowsmall" style="text-align: center;">
@@ -361,7 +361,7 @@
                 </p>
             </div>
         </div>
-       -->
+
 
 
     </div>
