добаввление видео + изменение внеш вида сайта

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,10 @@
         <head>
             <meta charset="utf-8">
             <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-            <link rel="stylesheet" type="text/css" href="{{ css }}}">
+            <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+            <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+            <link rel="stylesheet" type="text/css" href="/static/css/base.css">
             <link rel="stylesheet"
                 href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
                 integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
@@ -16,13 +19,16 @@
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
                     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
                     crossorigin="anonymous"></script>
-            <script src="/docs/5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-            <title>Главная страница</title>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+            <title> {{ title }} </title>
         </head>
         <body>
             <header class="p-3 text-bg-dark">
                 <div class="container">
-                    <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+                    <div>
+                        <div class="logo" style="width: 10%; display: table-cell;">
+                            <div class="pass">
+                            <!--
                         <a href='/' class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
                             <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="bi bi-shop" viewBox="0 0 16 16">
                                 <path d="M2.97 1.35A1 1 0 0 1 3.73 1h8.54a1 1 0 0 1 .76.35l2.609 3.044A1.5 1.5 0 0 1 16 5.37v.255a2.375 2.375 0 0 1-4.25 1.458A2.371 2.371 0 0 1 9.875 8 2.37 2.37 0 0 1 8 7.083 2.37 2.37 0 0 1 6.125 8a2.37 2.37 0 0 1-1.875-.917A2.375 2.375 0 0 1 0 5.625V5.37a1.5 1.5 0 0 1 .361-.976l2.61-3.045zm1.78 4.275a1.375 1.375 0 0 0 2.75 0 .5.5 0 0 1 1 0 1.375 1.375 0 0 0 2.75 0 .5.5 0 0 1 1 0 1.375 1.375 0 1 0 2.75 0V5.37a.5.5 0 0 0-.12-.325L12.27 2H3.73L1.12 5.045A.5.5 0 0 0 1 5.37v.255a1.375 1.375 0 0 0 2.75 0 .5.5 0 0 1 1 0zM1.5 8.5A.5.5 0 0 1 2 9v6h1v-5a1 1 0 0 1 1-1h3a1 1 0 0 1 1 1v5h6V9a.5.5 0 0 1 1 0v6h.5a.5.5 0 0 1 0 1H.5a.5.5 0 0 1 0-1H1V9a.5.5 0 0 1 .5-.5zM4 15h3v-5H4v5zm5-5a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1v-3zm3 0h-2v3h2v-3z"/>
@@ -32,15 +38,68 @@
                         <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
                             <h1 style="color: rgb(255, 91, 29);">Novak Decor</h1>
                         </a>
+                        -->
+                            </div>
+                            <button class="btn btn-legacy font-text" type="button" data-bs-toggle="dropdown" aria-expanded="False">
+                                <img crossorigin="Anonymous" src="//f2.lpcdn.site/98b2d8204125a6103ebce0d87914fe40/a90e697b040f7d4a4e8e4d58502b4d51.png" style="width: 60px; height: 56.4px">
+                            </button>
+                            <ul class="dropdown-menu" style="">
+                                <li><a class="dropdown-item" href="/">Главная страница</a></li>
+                                <!-- <li><a class="dropdown-item" href="/tehnology_production_flexible_stone">Технология производства Гибкого камня</a></li> -->
+                                <li><a class="dropdown-item" href="/catalog_flexible_stone">Каталог Гибкого Камня</a></li>
+                                <li><a class="dropdown-item" href="/catalog_thermal_panels">Каталог Термопанелей</a></li>
+                                <li><a class="dropdown-item" href="/certificates">Наши сертификаты</a></li>
+                            </ul>
                     </div>
-
+                        <div class="address" style="width: 25%; display: table-cell;">
+                            <a class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none" data-action="linknew">
+                                <span style="color: white; font-size: 16px;">г.Ульяновск, проезд Максимова, 39</span>
+                            </a>
+                        </div>
+                        <div class="phone_number" style="width: 20%; display: table-cell;">
+                        <a class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none" data-action="linknew" href="tel:89370379698">
+                            <span class="text icon">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone" viewBox="0 0 16 16">
+                                        <path d="M3.654 1.328a.678.678 0 0 0-1.015-.063L1.605 2.3c-.483.484-.661 1.169-.45 1.77a17.568 17.568 0 0 0 4.168 6.608 17.569 17.569 0 0 0 6.608 4.168c.601.211 1.286.033 1.77-.45l1.034-1.034a.678.678 0 0 0-.063-1.015l-2.307-1.794a.678.678 0 0 0-.58-.122l-2.19.547a1.745 1.745 0 0 1-1.657-.459L5.482 8.062a1.745 1.745 0 0 1-.46-1.657l.548-2.19a.678.678 0 0 0-.122-.58L3.654 1.328zM1.884.511a1.745 1.745 0 0 1 2.612.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"/>
+                                    </svg>
+                                    <span style="color: white; font-size: 16px; position: absolute;">+7 (937) 037-96-98</span>
+                            </span>
+                        </a>
+                    </div>
+                    </div>
                 </div>
-
             </header>
 
-            <!-- Begin page content -->
+            <div class="album py-5 bg-body-tertiary">
+                <!-- Begin page content -->
                 {% block content %}{% endblock %}
-            <!-- End page content-->
+                <!-- End page content-->
+                <div class="pass">
+                    <!--
+                    <div class="contacts">
+                        <div class="node node489 widget widget-text cr-text">
+                            <div class="font-header xs-force-center textable">
+                                <h2 class="shadowsmall">
+                                    <span style="color: rgb(255, 91, 29);">
+                                        <span style="font-size: 40px;">
+                                            <strong>Контакты</strong>
+                                        </span>
+                                    </span>
+                                </h2>
+                            </div>
+                        </div>
+                        <div class="container">
+                            <p>
+                                <h5>Наш адрес: </h5><p>г.Ульяновск, проезд Максимова, 39</p>
+                                <h5>Телефон: </h5><p>+7 (937) 037-96-98</p>
+                            </p>
+                        </div>
+                    </div>
+                    -->
+                </div>
+
+            </div>
+
 
             <div class="container">
                 <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
