--- a/templates/main_new.html
+++ b/templates/main_new.html
@@ -19,7 +19,7 @@
 
 
         <div class="block">
-
+            <!--
             <div class="headings">
                 <h2 class="shadowsmall">
                     <span class="orange_heading">
@@ -27,101 +27,53 @@
                     </span>
                 </h2>
             </div>
+            -->
+            <div id="carouselExampleCaptions" class="carousel slide carousel-fade">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                </div>
+                <div class="carousel-inner" style="width: 80%; height: 80%;">
+                    <div class="carousel-item active" align="center">
+                        <img src="static/img/main/1.jpg" class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" alt="фотография не смогла загрузиться">
+                    </div>
+                    <div class="carousel-item" align="center">
+                        <img src="static/img/main/2.jpg" class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" alt="фотография не смогла загрузиться">
+                    </div>
+                    <div class="carousel-item" align="center">
+                        <img src="static/img/main/3.jpg" class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" alt="фотография не смогла загрузиться">
+                    </div>
+                    <div class="carousel-item" align="center">
+                        <img src="static/img/main/4.jpg" class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" alt="фотография не смогла загрузиться">
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+
+            <br>
 
             <div class="container">
                 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-1 g-3">
                     <div class="card shadow-sm">
-                        <br>
-                        <div class="carousel-item active" align="center">
-                            <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-bs-ride="carousel">
-
-                                <div class="carousel-inner" style="width: 80%; height: 80%;">
-                                    <div class="carousel-item active" align="center">
-                                        <img src="static/img/main/1.jpg" class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" alt="фотография не смогла загрузиться">
-                                    </div>
-                                    <div class="carousel-item" align="center">
-                                        <img src="static/img/main/2.jpg" class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" alt="фотография не смогла загрузиться">
-                                    </div>
-                                    <div class="carousel-item" align="center">
-                                        <img src="static/img/main/3.jpg" class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" alt="фотография не смогла загрузиться">
-                                    </div>
-                                    <div class="carousel-item" align="center">
-                                        <img src="static/img/main/4.jpg" class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" alt="фотография не смогла загрузиться">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
                         <div class="card-body">
                             <p style="text-align: left;">
-                                <span style="font-size: 20px;"><strong>Гибкий камень </strong>- это тонкий, эластичный срез натурального песчаника, нанесенный на гибкую основу – стеклохолст, применяется в декоративной отделке помещений и фасадов зданий.</span>
+                                <span style="font-size: 20px;"><strong>Гибкий камень</strong> - это тонкий, эластичный срез натурального песчаника, нанесенный на гибкую основу – стеклохолст, применяется в декоративной отделке помещений и фасадов зданий.</span>
+                                <br>
+                                <span style="font-size: 20px;"><strong>Термопанель</strong> - это уникальный отделочный материал на основе любого твердого утеплителя, с декоративным слоем из натурального камня, применяется в облицовке и утеплении фасадов.</span>
                                 <br>
                                 <span style="font-size: 20px;"><strong>Цена в соответствии сезона снижена! Торопитесь приобрести качество по сниженным ценам!</strong></span>
                             </p>
                         </div>
-
                         <br>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <br>
-        <br>
-
-
-        <div class="block">
-
-            <div class="headings">
-                <h2 class="shadowsmall">
-                    <span class="orange_heading">
-                        <strong>Как мы производим Гибкий камень</strong>
-                    </span>
-                </h2>
-            </div>
-
-            <div class="container">
-                <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 g-2">
-                    <div class="card shadow-sm">
-                        <div class="items">
-                            <div class="items__container">
-                                <div class="items__body">
-                                    <div class="item">
-                                        <div class="item__video">
-                                            <div class="carousel-item active" align="center">
-                                                <br>
-                                                <video preload="auto" controls class="video_item" src="/static/video/1.mp4">
-                                                    <source src="/static/video/1.webm" type="video/webm">
-                                                    <source src="/static/video/1.mp4" type="video/mp4">
-                                                </video>
-                                            </div>
-                                        </div>
-                                        <div class="item__text">
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card shadow-sm">
-                        <div class="items">
-                            <div class="items__container">
-                                <div class="items__body">
-                                    <div class="item">
-                                        <div class="item__video">
-                                            <div class="carousel-item active" align="center">
-                                                <br>
-                                                <video preload="auto" controls class="video_item" src="/static/video/2.mp4">
-                                                    <source src="/static/video/2.webm" type="video/webm">
-                                                    <source src="/static/video/2.mp4" type="video/mp4">
-                                                </video>
-                                            </div>
-                                        </div>
-                                        <div class="item__text">
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -267,7 +219,7 @@
                                         <p style="text-align: left;">
                                             <span class="size_price">Размер - <strong>950х550мм</strong></span>
                                             <br>
-                                            <span class="size_price">Цена м<sup>2</sup> - <strong>980 руб</strong></span>
+                                            <span class="size_price">Цена м<sup>2</sup> - <strong>1150 руб</strong></span>
                                         </p>
                                     </div>
                                 </div>
@@ -340,11 +292,16 @@
 
 
         <div class="block_certificates">
-            <div class="container">
-                <div class="d-grid gap-1">
-                    <a href="/certificates" type="button" class="btn btn-outline-warning">Просмотреть сертификаты</a>
+            <a href="/certificates">
+                <div class="headings">
+                    <h2 class="shadowsmall">
+                        <span class="orange_heading">
+                            <strong>Наши сертификаты</strong>
+                        </span>
+                    </h2>
                 </div>
-            </div>
+            </a>
+
         </div>
 
 {% endblock %}
